# openclaw-skillify

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml
skill/skillify/: SKILL.md
src/skillify/: __init__.py  __main__.py  cli.py  keys.py  models.py
src/skillify/discover/: __init__.py  ai_analyzer.py  base.py  graphql.py  html_docs.py  openapi.py  python_pkg.py
src/skillify/generate/: __init__.py  planner.py  reference_writer.py  script_writer.py  skill_writer.py  validator.py
src/skillify/llm/: client.py  prompts.py
src/skillify/util/: fetcher.py  frontmatter.py
tests/: conftest.py  test_models.py
tests/fixtures/: petstore_openapi.json
tests/test_discover/: test_openapi.py
tests/test_generate/: test_planner.py  test_validator.py
